--- a/site/index.html
+++ b/site/index.html
@@ -99,7 +99,7 @@ body{font:12px/1.5 Microsoft yahei,\5b8b\4f53, georgia,verdana,helvetica,sans-se
                                     <li><a href="http://t.cn/E64tfER" class="favicon" style="background-image:url(https://p0.ssl.qhimg.com/t0106c4a262fc550269.png);">优惠券</a></li>
                                     <li><a href="https://www.wmzhe.cn">完美者</a></li>
                                     <li><a href="http://www.renren.com">人人</a><span class="split">•</span><a href="http://qzone.qq.com/">QQ空间</a></li>
-									<li><a class="site" href="https://m.tb.cn/h.eaQWT7o">淘宝特卖</a></li>
+									<li><a class="site" href="https://ju.taobao.com/">淘宝特卖</a></li>
 									<li><a href="http://t.cn/E64tnD2">影视大全</a></li>
 									<li><a href="http://www.tudou.com">土 豆 网</a></li>
 									<li><a href="https://www.bilibili.com">哔哩哔哩</a></li>
@@ -667,14 +667,14 @@ body{font:12px/1.5 Microsoft yahei,\5b8b\4f53, georgia,verdana,helvetica,sans-se
                                     <h3 class="subtitle dn"><a href="http://hao.360.cn/ruanjianxiazai.html">常用软件</a></h3>
                                     <ul class="list">
                                         <li><a href="https://www.huorong.cn" class="green">火绒安全</a></li>
-                                        <li><a href="http://dl.360safe.com/netunion/20140425/360safe+14478+n4a1de2568d.exe">360安全卫士</a></li>
-                                        <li><a href="http://dl.360safe.com/netunion/20140425/360sd_14478.exe">360杀毒</a></li>
-                                        <li><a href="http://dl.360safe.com/netunion/20140425/360se+14478+n4a1de2568d.exe">360安全浏览器</a></li>
+                                        <li><a href="https://weishi.360.cn/">360安全卫士</a></li>
+                                        <li><a href="https://sd.360.cn/">360杀毒</a></li>
+                                        <li><a href="https://browser.360.cn/se/">360安全浏览器</a></li>
                                         <li><a href="https://im.qq.com/">腾讯QQ</a></li>
                                         <li><a href="http://lab.mkblog.cn/wallpaper/">高清壁纸</a></li>
-                                        <li><a href="http://jifendownload.2345.cn/jifen_2345/iqiyi_kmengkunsoftware_198029.exe">爱奇艺</a></li>
-                                        <li><a href="http://jifendownload.2345.cn/jifen_2345/qqlive_kmengkunsoftware_536227.exe">腾讯视频</a></li>
-                                        <li><a href="https://jifendownload.2345.cn/jifen_2345/kugou_kmengkunsoftware_254018.exe">酷狗音乐</a></li>
+                                        <li><a href="http://app.iqiyi.com/">爱奇艺</a></li>
+                                        <li><a href="https://v.qq.com/download.html">腾讯视频</a></li>
+                                        <li><a href="http://download.kugou.com/">酷狗音乐</a></li>
                                         <li><a href="https://www.coolapk.com">手机软件</a></li>
                                     </ul>
                                 </div>
@@ -695,7 +695,6 @@ body{font:12px/1.5 Microsoft yahei,\5b8b\4f53, georgia,verdana,helvetica,sans-se
                     <a target="_blank" href="##">手机版</a> | 
                     <span class="rights">Copyright ©360.cn. All Rights Reserved.</span> 
                     <a href="http://www.miibeian.gov.cn/" rel="noreferrer" class="icp" target="_blank">京ICP证080047号</a> 
-                    <a href="http://www.bjgaj.gov.cn/web/" class="icp" target="_blank">京公网安备110000000006号</a>
 				</div>
 			</div>    	
 		</div>
