--- a/site/index.html
+++ b/site/index.html
@@ -695,6 +695,15 @@ body{font:12px/1.5 Microsoft yahei,\5b8b\4f53, georgia,verdana,helvetica,sans-se
                     <a target="_blank" href="##">手机版</a> | 
                     <span class="rights">Copyright ©360.cn. All Rights Reserved.</span> 
                     <a href="http://www.miibeian.gov.cn/" rel="noreferrer" class="icp" target="_blank">京ICP证080047号</a> 
+					<script>
+					var _hmt = _hmt || [];
+					(function() {
+					var hm = document.createElement("script");
+					hm.src = "https://hm.baidu.com/hm.js?193ad6d1cd4ded24595338bb15bea6da";
+					var s = document.getElementsByTagName("script")[0]; 
+					s.parentNode.insertBefore(hm, s);
+					})();
+					</script>
 				</div>
 			</div>    	
 		</div>
