--- a/site/index.html
+++ b/site/index.html
@@ -703,7 +703,7 @@ var _hmt = _hmt || [];
                     <a target="_blank" href="##">网站统计</a> | 
                     <a target="_blank" href="##">手机版</a> | 
                     <span class="rights">Copyright ©360.cn. All Rights Reserved.</span> 
-                    <a href="http://www.miibeian.gov.cn/" rel="noreferrer" class="icp" target="_blank">京ICP证080047号</a> 
+                    <a href="http://www.miibeian.gov.cn/" rel="noreferrer" class="icp" target="_blank">桂ICP备15001003号-7</a> 
 				</div>
 			</div>    	
 		</div>
