--- a/site/index.html
+++ b/site/index.html
@@ -67,10 +67,10 @@ var _hmt = _hmt || [];
                                 <a href="https://www.toutiao.com" class="tab-item news">新闻头条</a>
                             </li>
                             <li id="longlong-channel-tv">
-                                <a href="http://kan.2345.com/?kmengkunsoftware" class="tab-item tv">电 视 剧</a>
+                                <a href="http://kan.2345.com/?kskyts" class="tab-item tv">电 视 剧</a>
                             </li>
                             <li id="longlong-channel-movie">
-                                <a href="http://kan.2345.com/?kmengkunsoftware" class="tab-item movie">最新电影</a>
+                                <a href="http://kan.2345.com/?kskyts" class="tab-item movie">最新电影</a>
                             </li>
                             <li id="longlong-channel-game">
                                 <a href="http://www.4399.com" class="tab-item game">小 游 戏</a>
@@ -157,7 +157,7 @@ var _hmt = _hmt || [];
 							<div class="honghong-bd">
 								<ul>
 									<li class="yl"><a href="https://www.toutiao.com">新闻</a><span class="split">•</span><a href="https://www.douyu.com">直播</a></li>
-                                    <li class="dy"><a href="http://kan.2345.com/?kmengkunsoftware">电影</a><span class="split">•</span><a href="http://t.cn/E64tnD2">电视剧</a></li>				
+                                    <li class="dy"><a href="http://kan.2345.com/?kskyts">电影</a><span class="split">•</span><a href="http://t.cn/E64tnD2">电视剧</a></li>				
 									<li class="tg"><a href="https://m.tb.cn/h.eaGZaXs">今日团购</a></li>
 									<li class="cp"><a href="https://www.baidu.com/s?wd=彩票&ie=UTF-8">彩票</a><span class="split">•</span><a href="https://www.baidu.com/s?wd=双色球&ie=UTF-8">双色球</a></li>
 									<li class="gw"><a href="https://www.taobao.com">网上购物</a></li>		
@@ -195,10 +195,10 @@ var _hmt = _hmt || [];
                                     <div class="item">
                                         <h3 class="subtitle"><a href="http://t.cn/E64tnD2">影视</a></h3>
                                         <ul class="list">
-                                            <li><a href="http://kan.2345.com/?kmengkunsoftware">电 影</a></li>
-                                            <li><a href="http://kan.2345.com/?kmengkunsoftware">电视剧</a></li>
-                                            <li><a href="http://kan.2345.com/?kmengkunsoftware">综 艺</a></li>
-                                            <li><a href="http://kan.2345.com/?kmengkunsoftware">娱 乐</a></li>
+                                            <li><a href="http://kan.2345.com/?kskyts">电 影</a></li>
+                                            <li><a href="http://kan.2345.com/?kskyts">电视剧</a></li>
+                                            <li><a href="http://kan.2345.com/?kskyts">综 艺</a></li>
+                                            <li><a href="http://kan.2345.com/?kskyts">娱 乐</a></li>
                                             <li><a href="https://www.bilibili.com/">动 漫</a></li>
                                             <li><a href="http://tool.mkblog.cn/media/">电视直播</a></li>
                                             <li><a href="https://www.bilibili.com/documentary/">纪录片</a></li>
@@ -681,9 +681,9 @@ var _hmt = _hmt || [];
                                         <li><a href="https://browser.360.cn/se/">360安全浏览器</a></li>
                                         <li><a href="https://im.qq.com/">腾讯QQ</a></li>
                                         <li><a href="http://lab.mkblog.cn/wallpaper/">高清壁纸</a></li>
-                                        <li><a href="http://app.iqiyi.com/">爱奇艺</a></li>
+                                        <li><a href="https://jifendownload.2345.cn/jifen_2345/iqiyi_kskyts_186202.exe">爱奇艺</a></li>
                                         <li><a href="https://v.qq.com/download.html">腾讯视频</a></li>
-                                        <li><a href="http://download.kugou.com/">酷狗音乐</a></li>
+                                        <li><a href="https://jifendownload.2345.cn/jifen_2345/kugou_kskyts_565149.exe">酷狗音乐</a></li>
                                         <li><a href="https://www.coolapk.com">手机软件</a></li>
                                     </ul>
                                 </div>
