--- a/site/index.html
+++ b/site/index.html
@@ -35,7 +35,7 @@ var _hmt = _hmt || [];
 					<div id="header-frame">
 						<div class="item-logo">
 							<a id="imgLogo" title="单页导航,新一代安全上网导航" href="" target="_self">
-                                <img src="https://i.loli.net/2019/04/07/5ca9b9b208703.png" />
+                                <img src="logo.png" />
                             </a>
 						</div>
                         <div id="search">
