--- a/site/index.html
+++ b/site/index.html
@@ -109,7 +109,7 @@ var _hmt = _hmt || [];
                                     <li><a href="https://www.wmzhe.cn">完美者</a></li>
                                     <li><a href="http://www.renren.com">人人</a><span class="split">•</span><a href="http://qzone.qq.com/">QQ空间</a></li>
 									<li><a class="site" href="https://ju.taobao.com/">淘宝特卖</a></li>
-									<li><a href="http://t.cn/E64tnD2">影视大全</a></li>
+									<li><a href="http://kan.2345.com/?kskyts">影视大全</a></li>
 									<li><a href="http://www.tudou.com">土 豆 网</a></li>
 									<li><a href="https://www.bilibili.com">哔哩哔哩</a></li>
 									<li><a href="http://urlqh.cn/mhdjL">极速贷款</a></li>
@@ -157,7 +157,7 @@ var _hmt = _hmt || [];
 							<div class="honghong-bd">
 								<ul>
 									<li class="yl"><a href="https://www.toutiao.com">新闻</a><span class="split">•</span><a href="https://www.douyu.com">直播</a></li>
-                                    <li class="dy"><a href="http://kan.2345.com/?kskyts">电影</a><span class="split">•</span><a href="http://t.cn/E64tnD2">电视剧</a></li>				
+                                    <li class="dy"><a href="http://kan.2345.com/?kskyts">电影</a><span class="split">•</span><a href="http://kan.2345.com/?kskyts">电视剧</a></li>				
 									<li class="tg"><a href="https://m.tb.cn/h.eaGZaXs">今日团购</a></li>
 									<li class="cp"><a href="https://www.baidu.com/s?wd=彩票&ie=UTF-8">彩票</a><span class="split">•</span><a href="https://www.baidu.com/s?wd=双色球&ie=UTF-8">双色球</a></li>
 									<li class="gw"><a href="https://www.taobao.com">网上购物</a></li>		
@@ -183,8 +183,8 @@ var _hmt = _hmt || [];
                                 <div class="panel">
                                     <div class="nav">
                                         <a href="http://www.4399.com">游戏</a>
-                                        <a href="http://t.cn/E64tnD2">电影</a>
-                                        <a href="http://t.cn/E64tnD2">电视剧</a>
+                                        <a href="http://kan.2345.com/?kskyts">电影</a>
+                                        <a href="http://kan.2345.com/?kskyts">电视剧</a>
                                         <a href="http://www.zxcs.me/">小说</a>
                                         <a href="http://music.so.com">音乐</a>
                                         <a href="https://www.taobao.com">购物</a>
@@ -193,7 +193,7 @@ var _hmt = _hmt || [];
                                         <a href="https://m.tb.cn/h.eaGZaXs">淘宝皇冠店</a>
                                     </div>
                                     <div class="item">
-                                        <h3 class="subtitle"><a href="http://t.cn/E64tnD2">影视</a></h3>
+                                        <h3 class="subtitle"><a href="http://kan.2345.com/?kskyts">影视</a></h3>
                                         <ul class="list">
                                             <li><a href="http://kan.2345.com/?kskyts">电 影</a></li>
                                             <li><a href="http://kan.2345.com/?kskyts">电视剧</a></li>
@@ -203,7 +203,7 @@ var _hmt = _hmt || [];
                                             <li><a href="http://tool.mkblog.cn/media/">电视直播</a></li>
                                             <li><a href="https://www.bilibili.com/documentary/">纪录片</a></li>
                                         </ul>
-                                        <a href="http://t.cn/E64tnD2" class="more">更多»</a>
+                                        <a href="http://kan.2345.com/?kskyts" class="more">更多»</a>
                                     </div>
                                     <div class="item">
                                         <h3 class="subtitle"><a href="https://www.bilibili.com/">视频</a></h3>
