--- a/site/index.html
+++ b/site/index.html
@@ -624,11 +624,11 @@ var _hmt = _hmt || [];
                                 <div class="item">
                                     <h3 class="subtitle sy"><a href="http://tool.mkblog.cn">实用工具</a></h3>
                                     <ul class="list">
-                                        <li><a href="http://tool.mkblog.cn/ip/">IP查询</a></li>
+                                        <li><a href="https://www.ip138.com/">IP查询</a></li>
                                         <li><a href="http://tool.mkblog.cn/whois/">Whois查询</a></li>
                                         <li><a href="http://www.weizhang8.cn">车辆违章</a></li>
                                         <li><a href="https://www.52doutu.cn">斗图表情包</a></li>
-                                        <li><a href="http://tool.mkblog.cn/shouji/">手机查询</a></li>
+                                        <li><a href="https://www.ip138.com/sj/">手机查询</a></li>
                                         <li><a href="https://translate.google.cn">在线翻译</a></li>
                                         <li><a href="http://www.kuaidi100.com">快递查询</a></li>
                                         <li><a href="http://tool.mkblog.cn/ocr/">文字识别</a></li>
@@ -643,14 +643,14 @@ var _hmt = _hmt || [];
                                     <ul class="list">
                                         <li><a href="http://soyo.360.cn/zt/cf.html">CF穿越火线</a></li>
                                         <li><a href="http://soyo.360.cn/zt/lianliankan.html">连连看</a></li>
-                                        <li><a href="http://xiaoyouxi.360.cn/?src=yxjx">360小游戏</a></li>
+                                        <li><a href="http://xiaoyouxi.360.cn/">360小游戏</a></li>
                                         <li><a href="http://xiaoyouxi.360.cn/nvsheng/index.html">女生小游戏</a></li>
                                         <li><a href="http://soyo.360.cn/zt/plants.html">植物战僵尸</a></li>
                                         <li><a href="http://xiaoyouxi.360.cn/index/heji">小游戏合集</a></li>
                                         <li><a href="http://g.360.cn/zt/xiuxian.html">休闲游戏</a></li>
                                         <li><a href="http://g.360.cn/zt/angryBird.html">愤怒的小鸟</a></li>
                                         <li><a href="http://shouyou.360.cn/">手机游戏</a></li>
-                                        <li><a href="http://xiaoyouxi.360.cn/tag?tag=125">祖玛小游戏</a></li>
+                                        <li><a href="http://xiaoyouxi.360.cn/">祖玛小游戏</a></li>
                                     </ul>
                                 </div>
                             </div>
