--- a/site/index.html
+++ b/site/index.html
@@ -105,7 +105,7 @@ var _hmt = _hmt || [];
                                     <li><a class="green" href="https://mkblog.cn">孟坤博客</a></li>
                                     <li><a href="http://www.taobao.com/">淘 宝 网</a></li>
                                     <li><a href="https://www.tmall.com">天 猫</a></li>
-                                    <li><a href="http://t.cn/E64tfER" class="favicon" style="background-image:url(https://p0.ssl.qhimg.com/t0106c4a262fc550269.png);">优惠券</a></li>
+                                    <li><a href="https://ju.taobao.com/" class="favicon" style="background-image:url(https://p0.ssl.qhimg.com/t0106c4a262fc550269.png);">优惠券</a></li>
                                     <li><a href="https://www.wmzhe.cn">完美者</a></li>
                                     <li><a href="http://www.renren.com">人人</a><span class="split">•</span><a href="http://qzone.qq.com/">QQ空间</a></li>
 									<li><a class="site" href="https://ju.taobao.com/">淘宝特卖</a></li>
