--- a/site/index.html
+++ b/site/index.html
@@ -102,7 +102,7 @@ var _hmt = _hmt || [];
 									<li><a href="http://www.sohu.com">搜狐</a><span class="split">•</span><a href="http://tv.sohu.com/">视频</a></li>
 									<li><a href="http://www.163.com">网易</a><span class="split">•</span><a href="http://email.163.com">邮箱</a></li>
 									<li><a href="http://www.ifeng.com/">凤凰</a><span class="split">•</span><a href="http://news.ifeng.com/mil/">军事</a></li>
-                                    <li><a class="green" href="https://mkblog.cn">孟坤博客</a></li>
+                                    <li><a class="green" href="ts3server://teamspeak.ink?channel=Ring&channelpassword=0101">语音频道</a></li>
                                     <li><a href="http://www.taobao.com/">淘 宝 网</a></li>
                                     <li><a href="https://www.tmall.com">天 猫</a></li>
                                     <li><a href="https://ju.taobao.com/" class="favicon" style="background-image:url(https://p0.ssl.qhimg.com/t0106c4a262fc550269.png);">优惠券</a></li>
@@ -112,7 +112,7 @@ var _hmt = _hmt || [];
 									<li><a href="http://kan.2345.com/?kskyts">影视大全</a></li>
 									<li><a href="http://www.tudou.com">土 豆 网</a></li>
 									<li><a href="https://www.bilibili.com">哔哩哔哩</a></li>
-									<li><a href="http://urlqh.cn/mhdjL">极速贷款</a></li>
+									<li><a href="https://www.eastmoney.com/">东方财富</a></li>
 									<li><a href="http://jd.com/" class="favicon" style="background-image:url(https://p0.ssl.qhimg.com/t01be6e926729246a85.png);">京东商城</a></li>
 									<li><a href="http://www.people.com.cn/">人民</a><span class="split">•</span><a href="http://www.xinhuanet.com/">新华</a></li>
 									<li><a href="http://www.cntv.cn/">CNTV</a><span class="split">•</span><a href="http://tv.cctv.com/live/">直播</a></li>
