--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ var _hmt = _hmt || [];
 									<li><a href="http://www.vipshop.com">唯 品 会</a></li>
 									<li><a class="orange" href="http://www.jumei.com">聚美优品</a></li>
 									<li><a href="http://www.m18.com">M18麦考林</a></li>
-									<li><a class="green" href="ts3server://home.teamspeak.ink?channel=Ring&channelpassword=0329">语音频道</a></li>
+									<li><a class="green" href="ts3server://teamspeak.ink?port=9990&channel=Ring&channelpassword=0329">语音频道</a></li>
 								</ul>
 							</div>
 						</div>                    
